Created a file schema which contains title, description, and path. Edited code to allow for file upload with titles and descriptions. Refactored code so responses are in json format, complying to RESTful practices.
